--- a/css/template.css
+++ b/css/template.css
@@ -50,25 +50,16 @@ body, html {
   background-repeat:no-repeat;
 }
 
-
-
 /* TEXT BOXES  */
 #skudley h2{
   font-family: "lord Skudley";
   color: #ffa202;
 }
 
-#skudley p{
-  
-}
-
 .caption {
   font-family: "Sagacity";
   width: 100%;
-  /* top: 50%;
-  left: 50%; */
   margin: 0 0 0 0;
-  /* transform: translate(-50%, -50%); */
   background-color: rgba(78, 15, 107, 0.623);  
   z-index: 5;
 }
@@ -78,33 +69,6 @@ body, html {
   font-family: "Sagacity Caps";
 }
 
-.p1, .p2, .p3, .p4 {
-  font-family: "Lord Skudley";
-}
-
-.p1 a{
-  font-family: "Sagacity";
-}
-
-.p2 p{
-  font-family: "Indy";
-}
-
-.p3{
-  color: whitesmoke;
-}
-.p3 a{
-  font-family: "Stonecross";
-  color: whitesmoke
-}
-
-.p4{
-  color: whitesmoke
-}
-.p4 a{
-  font-family:"Goonies";
-  color: whitesmoke
-}
 /* SOCIAL MEDIA STYLING */  
 .fa {
   text-align: center;
@@ -127,5 +91,10 @@ body, html {
 
 .fa-instagram {
   background: #125688;
+  color: white;
+}
+
+.fa-pinterest {
+  background: #cb2027;
   color: white;
 }
